src/objects/SFDC_Setup_Audit_Trail__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Action_Short__c</fullName>
        <label>Action (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delegate_User__c</fullName>
        <label>Delegate User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Setup_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SFDC Setup Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Action_Short__c</columns>
        <columns>Date__c</columns>
        <columns>Delegate_User__c</columns>
        <columns>Section__c</columns>
        <columns>User__c</columns>
        <columns>Username__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Profile</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Section__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Action_Short__c</columns>
        <columns>Date__c</columns>
        <columns>Delegate_User__c</columns>
        <columns>User__c</columns>
        <columns>Username__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Section__c</field>
            <operation>contains</operation>
            <value>Manage Users</value>
        </filters>
        <filters>
            <field>Action_Short__c</field>
            <operation>contains</operation>
            <value>Changed profile</value>
        </filters>
        <filters>
            <field>Action_Short__c</field>
            <operation>notContain</operation>
            <value>user</value>
        </filters>
        <label>Profile</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Setup Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>